--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,19 @@
 .App {
+  text-align: left;
+}
+
+#menu-demo {
   text-align: center;
+  color:#623600
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#demo-menu-content {
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffe4c4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +21,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
